<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true"
  android:background="@drawable/background"
   android:weightSum="1.0">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
		<!--  Header -->
        <LinearLayout 
         android:id="@+id/header_reg"
         android:layout_width="fill_parent"
         android:layout_height="50dip"
         android:background="@drawable/header"
         android:tileMode="repeat"
         android:paddingTop="8dip"
         android:paddingBottom="8dip"
         android:gravity="center_vertical"
         android:orientation="horizontal"
         android:baselineAligned="false"
         android:weightSum="1.0">
                 <TextView
                      android:id="@+id/textView1"
                      android:layout_marginLeft="70dip"
                      android:layout_width="0dp"
                      android:layout_weight="0.5"
                      android:layout_height="fill_parent"
                      android:text="@string/header_texto"
                      android:textStyle="bold"
                      android:gravity="left|center"
                      android:layout_gravity="fill"
                      android:textAppearance="?android:attr/textAppearanceSmall"/>
                 <ImageView
                 android:layout_width="0dp"
                 android:layout_weight="0.5"
                 android:layout_height="fill_parent"
                 android:layout_gravity="right"
                 android:contentDescription="@string/logo_texto"
                 android:src="@drawable/botones_cabecera" />
    </LinearLayout>
        <!--  Header  -->

		<LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip"
          android:weightSum="0.97">		     
		    
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_duenio_label" />		    			
			<EditText
		        android:id="@+id/nombre_duenio_txt"	
				android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="10dip"
                android:singleLine="true"
				android:inputType="text">				
			</EditText>
			<TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/apellido_duenio_label" />                       
            <EditText
                android:id="@+id/apellido_duenio_txt" 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="10dip"
                android:singleLine="true"
                android:inputType="text">               
            </EditText>
            
			<TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"/>
            <EditText android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:layout_marginBottom="10dip"
                android:singleLine="true"
                android:id="@+id/email_txt"
                android:inputType="textEmailAddress">
            </EditText>
		
            <TextView android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/numero_telefono_label"/>
             <LinearLayout
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:orientation="horizontal">		
		            <EditText        
		                android:id="@+id/caracteristica_telefono_txt"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="5dip"
		                android:layout_marginBottom="10dip"
		                android:singleLine="true"
		                android:inputType="phone"
		                android:layout_weight="2"
		                android:text="@string/caract_texto"
		                android:maxLength="4">
		            </EditText>	
		             <EditText        
                        android:id="@+id/prefijo_telefono_txt"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dip"
                        android:layout_marginBottom="10dip"
                        android:singleLine="true"
                        android:inputType="phone"
                        android:layout_weight="2"
                        android:text="@string/prefijo_celular_texto"
                        android:maxLength="2"
                        android:enabled="false">
                    </EditText> 
				    <EditText        
				        android:id="@+id/numero_telefono_txt"
				        android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="5dip"
		                android:layout_marginBottom="10dip"
		                android:singleLine="true"
				        android:inputType="phone"
				        android:layout_weight="1"
				        android:maxLength="8">
				    </EditText>
		    </LinearLayout> 
		    <ImageButton 
		        android:id="@+id/registrar_usuario_button" 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/boton_registrar"
                android:contentDescription="@string/registrar_btn"/>
           <LinearLayout
            android:id="@+id/proceso_layout"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_weight="0.60"  
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:visibility="gone">

	            <ProgressBar
	                android:id="@+id/grafico_proceso"
	                style="?android:attr/progressBarStyleLarge"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	               />
	            <TextView
	                android:id="@+id/aviso_proceso_txt"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/aviso_enviando"
	                android:layout_marginTop="10dp"
	                android:textSize="25sp"
	                android:gravity="center"
	                android:textStyle="bold"
	                android:textColor="#FFF"
	                android:textAppearance="?android:attr/textAppearanceMedium"
	                />
        </LinearLayout>
           
			
		</LinearLayout>
	</LinearLayout>
</ScrollView>
